fixed footer's wrong position when the page is too short

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 1rem;
+  padding: 0rem 1rem;
+  min-height: calc(100vh - 10rem - 100px);
 }
 
 .about-title {
@@ -25,6 +26,7 @@
 
 h2 {
   font-size: 16px;
+  margin-top: 1.5rem;
 }
 
 .logo-about {
