--- a/src/components/SingleCoffee.css
+++ b/src/components/SingleCoffee.css
@@ -1,7 +1,7 @@
 .singleCoffeeContainer {
   display: flex;
   justify-content: center;
-  padding-bottom: 10rem;
+  min-height: calc(100vh - 10rem - 100px);
 }
 
 .content {
