--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,3 @@ body {
   background-color: #f6f4f2;
   color: #261103;
 }
-
-#root {
-  position: relative;
-}
